# wise_currency_rate_tl

./: README.md  pyproject.toml
src/: main.py  test.py
src/app/: __init__.py
src/app/config/: __init__.py
src/app/data/: order.json
src/app/models/: api_models.py  gsheet_model.py
src/app/processes/: wise_api.py
src/app/shared/: consts.py
src/app/utils/: gsheet.py  json_io.py  logger.py
