[project]
name = "wise-currency-rate-tl"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "python-dotenv>=1.0.1",
    "gspread>=6.1.4",
    "pydantic>=2.10.6",
    "httpx>=0.28.1",
    "pytz>=2025.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wise_currency_rate_tl"]
